WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237452
[WebAuthn] Cancel running operations on navigation / close
https://bugs.webkit.org/show_bug.cgi?id=237452
Summary
[WebAuthn] Cancel running operations on navigation / close
pascoe@apple.com
Reported
2022-03-03 15:47:03 PST
As part of support for conditional mediation, we allow running background "conditional" Webauthn assertions. These should be cancelled whenever a user navigates / closes the page.
Attachments
Patch
(9.26 KB, patch)
2022-03-10 14:25 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-03 15:47:15 PST
<
rdar://problem/89781990
>
pascoe@apple.com
Comment 2
2022-03-10 14:25:13 PST
Created
attachment 454400
[details]
Patch
Brent Fulgham
Comment 3
2022-03-11 09:26:58 PST
Comment on
attachment 454400
[details]
Patch r=me
EWS
Comment 4
2022-03-11 10:26:49 PST
Committed
r291177
(
248337@main
): <
https://commits.webkit.org/248337@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454400
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug